--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,16 @@ apply from: 'dependencies.gradle'
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.+'
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.12.0"
     }
 }
 
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
+    apply plugin: "maven"
     apply plugin: 'maven-publish'
     apply plugin: 'java'
 
