--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ allprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'java'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 
     group = "com.github.xpenatan"
 
